Fixes squirrely margins
Margins were too small on mobile in some pages. Removing numbers from `col-` classes lets flexboxgrid magically fix it.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,3 +337,13 @@ header #logo, header nav {
   }
 
 }
+
+@media (max-width: 768px) {
+    .row {
+      flex-direction: column;
+    }
+    .col-xs {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
